# openppp2

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_CN.md  appsettings.json  dns-rules.txt  main.cpp  ppp.vcxproj  ppp.vcxproj.filters  resource.rc
android/: CMakeLists.txt  OpenPPP2TelemetryBridge.cpp  OpenPPP2TelemetryBridge.h  OpenPPP2VpnProtectBridge.cpp  OpenPPP2VpnProtectBridge.h  libopenppp2.cpp  pubspec.yaml
bench/: CMakeLists.txt
bench/support/: bench_alloc_stub.cpp  bench_pool_stub.cpp  bench_stubs.cpp  buddy_impl.cpp  packet_stubs.cpp
bench/udp/: allocator_stress.cpp  bm_allocator.cpp  bm_crypto.cpp  bm_crypto_chain.cpp  bm_endpoint_serialize.cpp  bm_packet_codec.cpp  compat_check.cpp  evp_simd_test.cpp
cmake/: Coverage.cmake
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  CLIENT_ARCHITECTURE.md  CLIENT_ARCHITECTURE_CN.md  CLI_REFERENCE.md  CONCURRENCY_MODEL.md  CONCURRENCY_MODEL_CN.md  CONFIGURATION.md  CONFIGURATION_CN.md  DNS_MODULE_DESIGN.md  MUX_PERFLOW_DELIVERY_DESIGN_CN.md  P2P_MANUAL_VALIDATION.md  P2P_NETWORKING_PLAN.md  PEER_PREFIX_ROUTING.md  PEER_PREFIX_ROUTING_CN.md  PROXY_MODE.md  PROXY_MODE_TEST_PLAN.md  PROXY_ONLY_MODE_PLAN.md  README.md  README_CN.md  REMOTE_SUBSCRIPTION_CN.md  ROUTING_AND_DNS.md  ROUTING_AND_DNS_CN.md  TESTING.md  UDP_DECOUPLING_P2C_PLAN.md  UDP_DECOUPLING_P2D_PLAN.md  UDP_DECOUPLING_P2E_PLAN.md  (+2 more)
go/: go.mod  go.sum  (+3 more)
ios/: CMakeLists.txt  IosP2PDatagramTransport.cpp  IosP2PDatagramTransport.h  OpenPPP2PacketTunnelBridge.cpp  OpenPPP2PacketTunnelBridge.h  README.md  boost_context_stack_traits.cpp  build-openssl.sh  build-xcframework.sh  module.modulemap  package-ipa.sh  package-ipk.sh  sign-and-package-ipa.sh  sign-device-app.sh
ios/App/: Package.swift  README.md  build-signed.sh  build-unsigned.sh  run-tests.sh
ios/App/OpenPPP2/: AppDelegate.swift  AppGroupResolver.swift  AppModels.swift  CrashReporter.swift  CrashReportsViewController.swift  DebugSettingsViewController.swift  HomeViewController.swift  Info.plist  OptionsViewController.swift  ProfileDocumentPicker.swift  ProfileEditViewController.swift  ProfileImportExport.swift  ProfileStore.swift  ProfilesViewController.swift  SelectProfileViewController.swift  SettingsViewController.swift  Telemetry.swift  TelemetryIdentity.swift  TelemetrySettingsViewController.swift  TunnelSharedState.swift  UIHelpers.swift  VPNController.swift  ViewController.swift
ios/App/OpenPPP2.xcodeproj/: project.pbxproj
ios/App/OpenPPP2.xcodeproj/xcshareddata/xcschemes/: OpenPPP2.xcscheme  OpenPPP2PacketTunnel.xcscheme
ios/App/OpenPPP2/Runtime/: RuntimeControls.swift  RuntimeSnapshot.swift  RuntimeStore.swift  RuntimeTrafficRate.swift  TunnelRuntimeBridge.swift
ios/App/OpenPPP2PacketTunnel/: Info.plist  NativeTelemetryTransport.swift  OpenPPP2PacketTunnel.entitlements  OpenPPP2PacketTunnelAdapter.swift  PacketFlowDiagnostics.swift  PacketFlowOutputQueue.swift  PacketTunnelConfiguration.swift  PacketTunnelProvider.swift  ProviderOwnedP2PDatagramTransport.swift
ios/App/Tests/OpenPPP2LogicTests/: AppGroupResolverTests.swift  ProfileImportExportTests.swift  RuntimeControlsTests.swift  RuntimeSnapshotTests.swift  RuntimeStoreTests.swift  RuntimeTrafficRateTests.swift  VMuxPresentationTests.swift
ios/Examples/PacketTunnelProvider/: OpenPPP2PacketTunnelAdapter.swift  PacketTunnelProvider.swift
ios/ppp/tap/: TapIos.cpp  TapIos.h
tests/: CMakeLists.txt  dns_cache_ttl_tests.cpp
tests/contracts/runtime-snapshot/: SHA256SUMS  connected.json  failed.json  idle.json  reconnecting.json  unsupported-schema.json
tests/cpp/: CMakeLists.txt  aggregator_loader_test.cpp  base64_test.cpp  client_bypass_route_loader_test.cpp  client_connection_teardown_state_test.cpp  client_datagram_port_manager_test.cpp  client_keepalive_policy_test.cpp  client_lifecycle_stress_test.cpp  dns_buffer_test.cpp  dns_controller_test.cpp  dns_fake_ip_response_test.cpp  dns_host_interface_test.cpp  dns_host_ports_test.cpp  dns_host_wiring_test.cpp  dns_message_test.cpp  dns_reachability_test.cpp  dns_redirect_plan_test.cpp  dns_response_handler_test.cpp  dns_route_dispatcher_test.cpp  dns_server_validation_test.cpp  dns_session_context_test.cpp  dns_udp_relay_test.cpp  dns_wire_validation_test.cpp  exchanger_static_echo_channel_test.cpp  fake_ip_pool_test.cpp  ios_p2p_datagram_transport_test.cpp  linux_route_platform_contract_test.cpp  mux_transport_adapter_test.cpp  p2p_capability_gate_test.cpp  p2p_channel_lifecycle_test.cpp  p2p_client_offer_session_test.cpp  p2p_control_packet_test.cpp  p2p_control_state_machine_test.cpp  p2p_data_datagram_test.cpp  p2p_datagram_transport_test.cpp  p2p_information_message_test.cpp  p2p_key_derivation_test.cpp  p2p_nat_classifier_test.cpp  p2p_offer_token_test.cpp  p2p_relay_offer_consumer_test.cpp  (+29 more)
tests/cpp/support/: aggregator_loader_test_stubs.cpp  aggregator_loader_test_stubs.h  datagram_manager_stubs.cpp  datagram_manager_stubs.h  dns_host_wiring_switcher_stub.cpp  dns_host_wiring_switcher_stub.h  dns_host_wiring_test_owner.h  linux_route_platform_stubs.cpp  peer_prefix_json_test_stubs.cpp  peer_prefix_route_test_stubs.cpp  ppp_test_stubs.cpp  route_coordinator_platform_stub.cpp  server_datagram_manager_stubs.cpp  server_datagram_manager_stubs.h  static_datagram_manager_stubs.cpp  static_datagram_manager_stubs.h
tests/cpp/support/fake_aggligator/common/aggligator/: aggligator.cpp  aggligator.h
tests/integration/linux/: route_dns_rollback.sh
tests/red-manifest/: go_validator.md  p2p_replay_window.md
tests/tooling/: test_check_docs.py  test_ci_workspace_permissions.py  test_exchanger_subsystem_boundaries.py  test_lifecycle_wiring.py  test_p2p_capability_wiring.py  test_release_workflow.py  test_repository_layout.py  test_runtime_fixture_hashes.py  test_runtime_snapshot_schema_compat.py  test_runtime_ui_wiring.py  test_udp_benchmark_contract.py  test_vmux_benchmark_contract.py  test_vmux_transport_boundary.py
tests/unit/: test_application_mode.cpp  test_firewall_domains.cpp  test_proxy_defaults.cpp  test_tap_stub.cpp
(+625 files in other folders)
